# url-parser

./: README.md  pyproject.toml
url_parser/: __init__.py  core.py
